...
    );
  }, []);

  return (
    <>
      <View style={styles.buttonsContainer}>
        <Button title="Save Photo" testID="save-photo" onPress={savePhoto} />
        <Button
          title="Delete Last Saved Photo"
          testID="delete-photo"
          onPress={deletePhoto}
          disabled={!savedPhotoUrl}
        />
      </View>
      {savedPhotoUrl !== undefined ? (
        <CameraRollView
...
